--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,3 +37,11 @@ jobs:
                     cache: "maven"
             -   name: Run unit tests
                 run: mvn $MAVEN_CLI_OPTS test
+            -   name: Build with Maven
+                run: mvn -B test
+            -   name: Generate JaCoCo Badge
+                uses: cicirello/jacoco-badge-generator@v2
+                with:
+                    generate-branches-badge: true
+                    jacoco-csv-file: target/site/jacoco/jacoco.csv
+
